# dfir-nt-hive

./: Cargo.toml  README.md
docs/superpowers/plans/: 2026-07-22-lifetime-elision-warnings.md  2026-07-22-regf-v13-large-values.md
docs/superpowers/specs/: 2026-07-22-lifetime-elision-warnings-design.md  2026-07-22-regf-v13-large-values-design.md
src/: big_data.rs  error.rs  hive.rs  index_root.rs  key_node.rs  key_value.rs  key_values_list.rs  leaf.rs  subkeys_list.rs
